--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491
         with:
-          go-version-file: 'go.mod'
+          go-version-file: 'tools/cli/go.mod'
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@7ec5c2b0c6cdda6e8bbb49444bc797dd33d74dd8
         with:
