--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@7ec5c2b0c6cdda6e8bbb49444bc797dd33d74dd8
         with:
-          working-directory: tools/cli
+          workdir: tools/cli
           version: latest
           args: release --rm-dist
         env:
