--- a/.github/workflows/foas-prod.yml
+++ b/.github/workflows/foas-prod.yml
@@ -12,16 +12,11 @@ jobs:
   retrieve-oases:
     runs-on: ubuntu-latest
     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
-        with:
+      - name: Retrieve OASes from S3 bucket
+        env:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_DEV }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
           aws-region: ${{ secrets.AWS_REGION }}
-      - name: Retrieve foas-metadata.json from S3
-        run: aws s3 cp s3://${{ secrets.APIX_DEV_S3_BUCKET_NAME }}/openapi/foas-metadata.json foas-metadata.json
-      - name: Retrieve OASes from S3 bucket
         run: |
+          run: aws s3 cp s3://${{ secrets.APIX_DEV_S3_BUCKET_NAME }}/openapi/foas-metadata.json foas-metadata.json
           cat foas-metadata.json
-
-
