--- a/.github/workflows/foas-prod.yml
+++ b/.github/workflows/foas-prod.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
       - name: Retrieve OASes from S3 bucket
         env:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_DEV }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_DEV }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_DEV }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
         run: |
           aws s3 cp s3://${{ secrets.APIX_DEV_S3_BUCKET_NAME }}/openapi/foas-metadata.json foas-metadata.json
           cat foas-metadata.json
