--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -15,9 +15,12 @@ jobs:
         env:
           SPECTRAL_VERSION: ${{ vars.SPECTRAL_VERSION }}
         run: npx -- @stoplight/spectral-cli@"${SPECTRAL_VERSION}" lint ./tools/cli/test/data/openapi_foas*.{yml,yaml} --ruleset=.spectral.yaml # we will update this to lint the FOAS in CLOUDP-263186
+      - name: Checkout GO SDK repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+        with:
+         repository: 'mongodb/atlas-sdk-go'
+         token: ${{ secrets.API_BOT_PAT }}
       - name: Validate the FOAS can be used with the Go SDK
-        env:         
-          GO_SDK_BRANCH: main
         run: |
           ls -al
           source .github/scripts/sdk_validator.sh
