--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -14,14 +14,17 @@ jobs:
       - name: Run Spectral
         env:
           SPECTRAL_VERSION: ${{ vars.SPECTRAL_VERSION }}
-        run: npx -- @stoplight/spectral-cli@"${SPECTRAL_VERSION}" lint ./tools/cli/test/data/openapi_foas*.{yml,yaml} --ruleset=.spectral.yaml # we will update this to lint the FOAS in CLOUDP-263186
+        run: npx -- @stoplight/spectral-cli@"${SPECTRAL_VERSION}" lint ./tools/cli/test/data/openapi-foas*.{yml,yaml} --ruleset=.spectral.yaml # we will update this to lint the FOAS in CLOUDP-263186
       - name: Checkout GO SDK repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
         with:
          repository: 'mongodb/atlas-sdk-go'
          token: ${{ secrets.API_BOT_PAT }}
+         path: 'atlas-sdk-go'
       - name: Validate the FOAS can be used with the Go SDK
         run: |
           ls -al
-          source .github/scripts/sdk_validator.sh
-          sdk_validate "./tools/cli/test/data/openapi_foas-dev.yaml"
+          cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "atlas-sdk-go/openapi/atlas-sdk.yaml"
+          pushd atlas-sdk-go
+          make -e openapi-pipeline
+          popd
