--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -15,6 +15,10 @@ jobs:
         env:
           SPECTRAL_VERSION: ${{ vars.SPECTRAL_VERSION }}
         run: npx -- @stoplight/spectral-cli@"${SPECTRAL_VERSION}" lint ./tools/cli/test/data/openapi-foas*.{yml,yaml} --ruleset=.spectral.yaml # we will update this to lint the FOAS in CLOUDP-263186
+      - name: Install Go
+        uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32
+        with:
+          go-version-file: 'tools/cli/go.mod'
       - name: Checkout GO SDK repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
         with:
