--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -15,6 +15,12 @@ jobs:
         env:
           SPECTRAL_VERSION: ${{ vars.SPECTRAL_VERSION }}
         run: npx -- @stoplight/spectral-cli@"${SPECTRAL_VERSION}" lint ./tools/cli/test/data/openapi-foas*.{yml,yaml} --ruleset=.spectral.yaml # we will update this to lint the FOAS in CLOUDP-263186
+      - name: Validate the FOAS can be used to generate Postman collection
+        run: |
+          cp -rf "./tools/cli/test/data/openapi-foas-dev.json" "./tools/postman/openapi/atlas-api.json"
+          pushd tools/postman
+          make convert_to_collection
+          popd
       - name: Install Go
         uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32
         with:
@@ -27,7 +33,6 @@ jobs:
          path: 'atlas-sdk-go'
       - name: Validate the FOAS can be used with the Go SDK
         run: |
-          ls -al
           cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "atlas-sdk-go/openapi/atlas-sdk.yaml"
           pushd atlas-sdk-go
           make -e openapi-pipeline
