--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -67,7 +67,7 @@ jobs:
         if: ${{ failure() }}
         uses: imjohnbo/issue-bot@572eed14422c4d6ca37e870f97e7da209422f5bd
         env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.API_BOT_PAT }}
         with:
           labels: failed-release
           title: "(PROD) Optional Postman validation failed :scream_cat:"
