--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -66,9 +66,8 @@ jobs:
       - name: Create Issue
         if: ${{ failure() }}
         uses: imjohnbo/issue-bot@572eed14422c4d6ca37e870f97e7da209422f5bd
-        env:
-          TOKEN: ${{ secrets.API_BOT_PAT }}
         with:
           labels: failed-release
           title: "(PROD) Optional Postman validation failed :scream_cat:"
           body: See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          token: ${{ secrets.API_BOT_PAT }}
