--- a/.github/workflows/required-spec-validations.yml
+++ b/.github/workflows/required-spec-validations.yml
@@ -15,12 +15,11 @@ jobs:
         - name: Create Issue
           if: ${{ failure() }}
           uses: imjohnbo/issue-bot@572eed14422c4d6ca37e870f97e7da209422f5bd
-          env:
-            TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
             labels: failed-release
             title: "(PROD) Required Spectal validation failed :scream_cat:"
             body: See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            token: ${{ secrets.API_BOT_PAT }}
         - name: Install Go
           uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32
           with:
@@ -40,10 +39,9 @@ jobs:
         - name: Create Issue
           if: ${{ failure() }}
           uses: imjohnbo/issue-bot@572eed14422c4d6ca37e870f97e7da209422f5bd
-          env:
-            TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
             labels: failed-release
             title: "(PROD) Required GO SDK validation failed :scream_cat:"
             body: See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            token: ${{ secrets.API_BOT_PAT }}
     
