--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -10,11 +10,15 @@ jobs:
   run-required-validations:
     uses: ./.github/workflows/required-spec-validations.yml
     secrets:
-      API_BOT_PAT: ${{ secrets.API_BOT_PAT }}
+      api_bot_pat: ${{ secrets.API_BOT_PAT }}
+    with:
+      spectral_version: ${{ vars.SPECTRAL_VERSION }}
   # Optional validations won't stop the release but only open a GH issue if they fail
   run-optional-validations:
     uses: ./.github/workflows/optional-spec-validations.yml
-  
+    secrets:
+      api_bot_pat: ${{ secrets.API_BOT_PAT }}
+      
   split-spec-to-versions:
     runs-on: ubuntu-latest
     needs: [run-required-validations]
