--- a/.github/workflows/required-spec-validations.yml
+++ b/.github/workflows/required-spec-validations.yml
@@ -1,7 +1,14 @@
 name: 'Required Spec Validations'
 on:
   workflow_call:
-
+    inputs:
+      spectral_version:
+        description: 'Version of Spectral to use'     
+        type: string
+        required: true
+    secrets: # all secrets are passed explicitly in this workflow
+      api_bot_pat:
+        required: true
 jobs:  
   run-required-validations:
       runs-on: ubuntu-latest
@@ -10,7 +17,7 @@ jobs:
           uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
         - name: Run Spectral
           env:
-            SPECTRAL_VERSION: ${{ vars.SPECTRAL_VERSION }}
+            SPECTRAL_VERSION: ${{ inputs.spectral_version }}
           run: npx -- @stoplight/spectral-cli@"${SPECTRAL_VERSION}" lint ./tools/cli/test/data/openapi-foas*.{yml,yaml} --ruleset=.spectral.yaml # we will update this to lint the FOAS in CLOUDP-263186
         - name: Create Issue
           if: ${{ failure() }}
@@ -19,7 +26,7 @@ jobs:
             labels: failed-release
             title: "(PROD) Required Spectal validation failed :scream_cat:"
             body: See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-            token: ${{ secrets.API_BOT_PAT }}
+            token: ${{ secrets.api_bot_pat }}
         - name: Install Go
           uses: actions/setup-go@0a12ed9d6a96ab950c8f026ed9f722fe0da7ef32
           with:
@@ -28,7 +35,7 @@ jobs:
           uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
           with:
             repository: 'mongodb/atlas-sdk-go'
-            token: ${{ secrets.API_BOT_PAT }}
+            token: ${{ secrets.api_bot_pat }}
             path: 'atlas-sdk-go'
         - name: Validate the FOAS can be used with the Go SDK
           run: |
@@ -43,5 +50,5 @@ jobs:
             labels: failed-release
             title: "(PROD) Required GO SDK validation failed :scream_cat:"
             body: See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-            token: ${{ secrets.API_BOT_PAT }}
+            token: ${{ secrets.api_bot_pat }}
     
