--- a/.github/workflows/optional-spec-validations.yml
+++ b/.github/workflows/optional-spec-validations.yml
@@ -6,7 +6,7 @@ on:
         required: true
 
 jobs:  
-  run-optional-validations:
+  optional-validations:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
