--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -18,7 +18,7 @@ jobs:
     uses: ./.github/workflows/optional-spec-validations.yml
     secrets:
       api_bot_pat: ${{ secrets.API_BOT_PAT }}
-      
+
   split-spec-to-versions:
     runs-on: ubuntu-latest
     needs: [run-required-validations]
@@ -34,4 +34,4 @@ jobs:
           pushd tools/cli
           make build
           popd
-          ./tools/cli/bin/foascli split --spec-path=./test/data/openapi-foas-dev.yaml
+          ./tools/cli/bin/foascli split -s ./test/data/openapi-foas-dev.yaml --env prod
