--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         env:
-            GITHUB_TOKEN: ${{ secrets.API_BOT_PAT }}
+            GITHUB_TOKEN: ${{ secrets.PT }}
         with:
           title: "APIBot: SDK update based on recent changes in Atlas API"
           commit-message: "release: (PROD) Release OpenAPI Spec :rocket:"
