--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -5,6 +5,7 @@ on:
     - cron: '0 9 * * *' # Run at 9AM UTC
 permissions:
   contents: write
+  pull-requests: write
 jobs:
   # Required validations will stop the release if they fail
   run-required-validations:
@@ -38,7 +39,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          git-token: ${{ secrets.PT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           title: "APIBot: SDK update based on recent changes in Atlas API"
           commit-message: "release: (PROD) Release OpenAPI Spec :rocket:"
           delete-branch: true
