--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -35,6 +35,7 @@ jobs:
           pushd tools/cli
           make build
           popd
+          mkdir -p openapi/v2
           cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "openapi/v2.yaml"
           cp -rf "./tools/cli/test/data/openapi-foas-dev.json" "openapi/v2.json"
           ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.yaml --env prod -o /openapi/v2
