--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -38,8 +38,8 @@ jobs:
           mkdir -p openapi/v2
           cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "openapi/v2.yaml"
           cp -rf "./tools/cli/test/data/openapi-foas-dev.json" "openapi/v2.json"
-          ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.yaml --env prod -o /openapi/v2/.yaml
-          ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.json --env prod -o /openapi/v2/.json
+          ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.yaml --env prod -o /openapi/v2/openapi.yaml
+          ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.json --env prod -o /openapi/v2/openapi.json
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
