--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -35,12 +35,11 @@ jobs:
           pushd tools/cli
           make build
           popd
-          mkdir -p openapi/v2
+          mkdir -p /openapi/v2
           ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.yaml --env prod -o /openapi/v2/openapi.yaml
           ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.json --env prod -o /openapi/v2/openapi.json
           cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "openapi/v2.yaml"
           cp -rf "./tools/cli/test/data/openapi-foas-dev.json" "openapi/v2.json"
-  
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
