--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -8,21 +8,21 @@ permissions:
   pull-requests: write
 jobs:
   # Required validations will stop the release if they fail
-  run-required-validations:
-    uses: ./.github/workflows/required-spec-validations.yml
-    secrets:
-      api_bot_pat: ${{ secrets.API_BOT_PAT }}
-    with:
-      spectral_version: ${{ vars.SPECTRAL_VERSION }}
-  # Optional validations won't stop the release but only open a GH issue if they fail
-  run-optional-validations:
-    uses: ./.github/workflows/optional-spec-validations.yml
-    secrets:
-      api_bot_pat: ${{ secrets.API_BOT_PAT }}
+  # run-required-validations:
+  #   uses: ./.github/workflows/required-spec-validations.yml
+  #   secrets:
+  #     api_bot_pat: ${{ secrets.API_BOT_PAT }}
+  #   with:
+  #     spectral_version: ${{ vars.SPECTRAL_VERSION }}
+  # # Optional validations won't stop the release but only open a GH issue if they fail
+  # run-optional-validations:
+  #   uses: ./.github/workflows/optional-spec-validations.yml
+  #   secrets:
+  #     api_bot_pat: ${{ secrets.API_BOT_PAT }}
 
   split-spec-to-versions:
     runs-on: ubuntu-latest
-    needs: [run-required-validations]
+    # needs: [run-required-validations]
     steps:
       - name: Checkout repository
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
@@ -35,9 +35,9 @@ jobs:
           pushd tools/cli
           make build
           popd
-          ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.json --env prod -o /openapi/v2/openapi.json
-          cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "openapi/v2.yaml"
-          cp -rf "./tools/cli/test/data/openapi-foas-dev.json" "openapi/v2.json"
+          ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.json --env prod -o ./openapi/v2/openapi.json
+          cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "./openapi/v2.yaml"
+          cp -rf "./tools/cli/test/data/openapi-foas-dev.json" "./openapi/v2.json"
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
