--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -8,17 +8,17 @@ permissions:
   pull-requests: write
 jobs:
   # Required validations will stop the release if they fail
-  # run-required-validations:
-  #   uses: ./.github/workflows/required-spec-validations.yml
-  #   secrets:
-  #     api_bot_pat: ${{ secrets.API_BOT_PAT }}
-  #   with:
-  #     spectral_version: ${{ vars.SPECTRAL_VERSION }}
-  # # Optional validations won't stop the release but only open a GH issue if they fail
-  # run-optional-validations:
-  #   uses: ./.github/workflows/optional-spec-validations.yml
-  #   secrets:
-  #     api_bot_pat: ${{ secrets.API_BOT_PAT }}
+  run-required-validations:
+    uses: ./.github/workflows/required-spec-validations.yml
+    secrets:
+      api_bot_pat: ${{ secrets.API_BOT_PAT }}
+    with:
+      spectral_version: ${{ vars.SPECTRAL_VERSION }}
+  # Optional validations won't stop the release but only open a GH issue if they fail
+  run-optional-validations:
+    uses: ./.github/workflows/optional-spec-validations.yml
+    secrets:
+      api_bot_pat: ${{ secrets.API_BOT_PAT }}
 
   split-spec-to-versions:
     runs-on: ubuntu-latest
@@ -36,8 +36,10 @@ jobs:
           make build
           popd
           ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.json --env prod -o ./openapi/v2/openapi.json
-          cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "./openapi/v2.yaml"
           cp -rf "./tools/cli/test/data/openapi-foas-dev.json" "./openapi/v2.json"
+          
+          ./tools/cli/bin/foascli split -s ./tools/cli/test/data/openapi-foas-dev.yaml --env prod -o ./openapi/v2/openapi.yaml
+          cp -rf "./tools/cli/test/data/openapi-foas-dev.yaml" "./openapi/v2.yaml"
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
