--- a/.github/workflows/release-spec-prod.yml
+++ b/.github/workflows/release-spec-prod.yml
@@ -63,7 +63,7 @@ jobs:
             run-id: ${{ github.run_id }}
         - name: Build CLI
           working-directory: tools/cli
-          run: make build
+          run: make build && echo "$(pwd)/bin" >> "${GITHUB_PATH}"
         - name: Run foascli split command
           id: split
           env:
