--- a/.github/workflows/release-spec.yml
+++ b/.github/workflows/release-spec.yml
@@ -108,7 +108,8 @@ jobs:
             title: "(${{env.target_env}}) Release: `foascli split` command failed :scream_cat:"
             body: See https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
             token: ${{ secrets.GITHUB_TOKEN }}
-        - name: Create branded_preview.html 
+        - name: Create branded_preview.html
+          working-directory: openapi 
           env:
               target_env: ${{ inputs.env }}
           run: .github/scripts/branded_preview.sh
