--- a/.github/workflows/release-spec.yml
+++ b/.github/workflows/release-spec.yml
@@ -112,7 +112,7 @@ jobs:
           working-directory: openapi 
           env:
               target_env: ${{ inputs.env }}
-          run: .github/scripts/branded_preview.sh
+          run: ../.github/scripts/branded_preview.sh
         - name: Commit changes
           id: commit
           uses: stefanzweifel/git-auto-commit-action@8621497c8c39c72f3e2a999a26b4ca1b5058a842
