--- a/.github/workflows/generate-openapi.yml
+++ b/.github/workflows/generate-openapi.yml
@@ -62,7 +62,8 @@ jobs:
         run: |
           chmod +x release-scripts/*.sh
       - name: Retrieve Specs
-        run: curl https://raw.githubusercontent.com/mongodb/openapi/dev/openapi/v2.json -o openapi-foas-${{ inputs.env }}.json
+        run: | 
+          curl https://raw.githubusercontent.com/mongodb/openapi/dev/openapi/v2.json -o openapi-foas.json
       - name: Upload artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
