--- a/.github/workflows/release-spec.yml
+++ b/.github/workflows/release-spec.yml
@@ -68,32 +68,9 @@ jobs:
       env: ${{ inputs.env }}
       foascli_version: ${{ inputs.foascli_version }}
 
-  # Required validations will stop the release if they fail
-  run-required-validations:
-    name: Run Required Validations
-    needs: generate-spec
-    uses: ./.github/workflows/required-spec-validations.yml
-    secrets:
-      api_bot_pat: ${{ secrets.api_bot_pat }}
-    with:
-      spectral_version: ${{ inputs.spectral_version }}
-      env: ${{ inputs.env }}
-
-  # Optional validations won't stop the release but only open a GH issue if they fail
-  run-optional-validations:
-    name: Run Optional Validations
-    needs: generate-spec
-    uses: ./.github/workflows/optional-spec-validations.yml
-    secrets:
-      api_bot_pat: ${{ secrets.api_bot_pat }}
-    with:
-      env: ${{ inputs.env }}
-      spectral_version: ${{ vars.SPECTRAL_VERSION }}
-
   release:
       name: Release OpenAPI Spec for V2 APIs
       runs-on: ubuntu-latest
-      needs: [run-required-validations]
       outputs:
         changes_detected: ${{ steps.commit.outputs.changes_detected }}
       steps:
@@ -159,17 +136,6 @@ jobs:
             branch: ${{env.target_branch}}
             file_pattern: "openapi/*"
 
-  release-postman:
-      name: Release Postman
-      needs: [release]
-      if: ${{ inputs.env == 'prod' && needs.release.outputs.changes_detected == 'true' }}
-      uses: ./.github/workflows/release-postman.yml
-      secrets:
-        postman_api_key: ${{ secrets.postman_api_key }}
-        workspace_id: ${{ secrets.workspace_id }}
-      with:
-        atlas_prod_base_url: ${{ inputs.atlas_prod_base_url}}
-
   release-changelog:
     name: Release API Changelog
     needs: release
@@ -194,7 +160,7 @@ jobs:
       api_bot_pat: ${{ secrets.api_bot_pat }}
 
   retry-handler:
-    needs: [ release, release-postman, release-changelog]
+    needs: [ release, release-changelog]
     if: ${{ always() && contains(needs.*.result, 'failure') && fromJSON(github.run_attempt) < 3}}
     runs-on: ubuntu-latest
     steps:
@@ -205,7 +171,7 @@ jobs:
 
   failure-handler:
     name: Failure Handler
-    needs: [retry-handler, release, release-postman, release-changelog]
+    needs: [retry-handler, release, release-changelog]
     if: ${{ always() && contains(needs.*.result, 'failure') && needs.retry-handler.result == 'skipped' }}
     uses: ./.github/workflows/failure-handler.yml
     with:
