--- a/.github/workflows/generate-openapi.yml
+++ b/.github/workflows/generate-openapi.yml
@@ -64,6 +64,7 @@ jobs:
       - name: Retrieve Specs
         run: | 
           curl https://raw.githubusercontent.com/mongodb/openapi/dev/openapi/v2.json -o openapi-foas.json
+          curl https://raw.githubusercontent.com/mongodb/openapi/dev/openapi/v2.yaml -o openapi-foas.yaml
       - name: Upload artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
