--- a/.github/workflows/release-cleanup.yml
+++ b/.github/workflows/release-cleanup.yml
@@ -32,6 +32,9 @@ jobs:
           github-token: ${{ secrets.api_bot_pat }}
           run-id: ${{ github.run_id }}
           path: release-scripts
+      - name: Add permissions to execute scripts
+        run: |
+          chmod +x release-scripts/*.sh
       - name: Get List of Files to Delete
         id: list_files_to_delete
         run: ./release-scripts/get_list_files_to_delete.sh
